Gives small right margin to titles to prevent text cropping at narrow widths

--- a/src/components/blocks/search-sidebar-item/_search-sidebar-item.scss
+++ b/src/components/blocks/search-sidebar-item/_search-sidebar-item.scss
@@ -40,7 +40,7 @@
   }
 
   &__content {
-    margin: 10px 0 10px 10px;
+    margin: 10px 5px 10px 10px;
     position: absolute;
     text-align: left;
     top: 0;
